wrong color in ios fix

--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -147,5 +147,28 @@
 }
 
 
+.button-stack {
+  display: none; /* Hidden by default */
+  flex-direction: column;
+  gap: 6px; /* Space between buttons */
 
+  flex:1;
+}
 
+/* wrong color in ios fix */
+.button-stack button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.3em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
+  color: white;
+}
