--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ h1 {
 }
 
 button {
+  all: unset;  
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.3em 1em;
@@ -118,6 +119,7 @@ button {
   display: flex;
   align-items: center;   
   justify-content: center; 
+  color: white;
 }
 button:hover {
   border-color: #646cff;
